Version 124 breaks GLX rendering with Nvidia on Linux
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox124 | --- | wontfix |
firefox125 | --- | fixed |
firefox126 | --- | fixed |
People
(Reporter: vbocek, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(3 files)
76.25 KB,
application/json
|
Details | |
42.01 KB,
text/plain
|
Details | |
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:123.0) Gecko/20100101 Firefox/123.0
Steps to reproduce:
- Set
gfx.x11-egl.force-disabled
to 1 - Observe if WebRender is using gpu in about:support
- Update from 123.0.1 to 124.0
(I'm disabling EGL because after a while of using, it stops working and falls back to software with "Failed to create EGLSurface!: 0x3003" - GLX worked well).
Actual results:
WebRender is now using Software rendering and Firefox print this on start:
[GFX1-]: Failed GL context creation for WebRender: 0
[GFX1-]: FEATURE_FAILURE_WEBRENDER_INITIALIZE_UNSPECIFIED
[GFX1-]: Failed to connect WebRenderBridgeChild. isParent=true
[GFX1-]: Fallback WR to SW-WR
I tested 125 beta and today's nightly as well, with same results. Reverting back to 123 with same profile fixed it again.
Expected results:
GLX rendering shoud've kept working.
Comment 1•1 year ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Graphics: WebRender' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•1 year ago
|
||
Thank you for the bug report. Could you please attach a copy of your about:support information to the bug.
Could you also please try running mozregression to find out which commit has introduced this bug. You can install it by running pip install --user mozregression
, then run the command mozregression --good 123 --bad 124 --pref gfx.x11-egl.force-disabled:true
. This will run a series of versions of firefox. For each one you answer whether it is good or bad, and eventually it will give you a link showing which changes introduced the bug. Let me know if you need any help with that. Thanks!
Hello, attached support info (from 124). mozregression got me this:
4:19.97 INFO: Last good revision: ccaccfe2cb77380846b2d6c5ab5cc3da4ab5cb33
4:19.97 INFO: First bad revision: 63cb54db7879e0d226fb023288e30a0e22ca204f
(BTW, the mozregression tool is really cool and easy to use, I was thinking bisecting this would be really hard and took forever, but no!)
Comment 6•1 year ago
|
||
Thanks. It's pretty nifty, usually it even manages to get a bit more precise answer than that. However, from that list bug 1875369 looks most suspicious. Martin, any ideas whether that could have caused this?
Assignee | ||
Comment 7•1 year ago
|
||
I see, so it's GLX failure init here. Will look at it.
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Comment 8•1 year ago
|
||
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
Comment 9•1 year ago
|
||
Set release status flags based on info from the regressing bug 1875369
Comment 10•1 year ago
|
||
Comment 11•1 year ago
|
||
bugherder |
Comment 12•1 year ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox125
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Comment 13•1 year ago
|
||
Comment on attachment 9392745 [details]
Bug 1886802 [Linux] Init XWindow for GLX context early r?emilio
Beta/Release Uplift Approval Request
- User impact if declined: Fallback OpenGL (GLX) is broken on Linux.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Set XWindow to GLX code early as we did before.
- String changes made/needed:
- Is Android affected?: No
Comment 14•1 year ago
|
||
:stransky do you want to consider this for the planned dot release as well?
Comment 15•1 year ago
|
||
Comment on attachment 9392745 [details]
Bug 1886802 [Linux] Init XWindow for GLX context early r?emilio
Approved for 125.0b5.
Updated•1 year ago
|
Comment 16•1 year ago
|
||
uplift |
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Comment 17•1 year ago
|
||
No need for dot release.
Updated•1 year ago
|
Description
•