Bug 1886802 [Linux] Init XWindow for GLX context early r=emilio a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D205441